# gchat_mbox_extractor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
archive/: main_old.rs
src/: main.rs  ui.rs
src/models/: attachment.rs  mbox_entry.rs  message.rs  mod.rs
src/parsers/: html_parser.rs  mbox_parser.rs  message_parser.rs  mod.rs
src/ui/: animations.rs  app.rs  components.rs  mod.rs  processing.rs
src/utils/: csv_utils.rs  file_utils.rs  mod.rs
