[package]
name = "gchat_mbox_extractor"
version = "0.1.3"
edition = "2021"

[dependencies]
quoted_printable = "0.5.1"
regex = "1.10.5"
base64 = "0.22.1"
html-escape = "0.2.13"
rayon = "1.10.0"
eframe = "0.28.1"
egui = "0.28.1"
native-dialog = "0.7.0"
chrono = "0.4.38"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"